# AudioMixer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/hyq/hm/audiomixer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hyq/hm/audiomixer/: AudioHolder.java  AudioMerge.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/hyq/hm/audiomixer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lamemp3/: CMakeLists.txt
lamemp3/src/androidTest/java/com/hyq/hm/lamemp3/: ExampleInstrumentedTest.java
lamemp3/src/main/: AndroidManifest.xml
lamemp3/src/main/cpp/: simple_lame.cpp
lamemp3/src/main/java/com/hyq/hm/lamemp3/: SimpleLame.java
lamemp3/src/main/res/values/: strings.xml
lamemp3/src/test/java/com/hyq/hm/lamemp3/: ExampleUnitTest.java
